--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -27,13 +27,13 @@
                     
                     
                 </p:dialog>
-                 <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" 
+                 <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{gestionMateriasController.materiaList}" 
                              paginator="true"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">   
-                    <p:column headerText="Nombre" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                        #{formatoPantallas.campo100}
+                    <p:column headerText="Nombre" filterBy="#{car.idAlumno.nombreCompleto}" filterable="true" filterMatchMode="contains">
+                        #{car.idAlumno.nombreCompleto}
                     </p:column>
                     <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         #{formatoPantallas.campo15}
@@ -45,10 +45,15 @@
                         #{formatoPantallas.campo15}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Materia"></i>
-                        <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Materia"></i>
+                        <p:commandLink action="#{gestionMateriasController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Materia" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionMateriasController.modificar(car)}" >
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Materia"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionMateriasController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Materia"></i>
+                        </p:commandLink>
                     </p:column>
-                </p:dataTable>
+                 </p:dataTable>
                 <div class="EmptyBox20"></div>
                 <p:commandButton value="Registrar Materia"></p:commandButton>
                 <p:commandButton value="Refrescar"></p:commandButton>
