--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
+<!-- 2015-09-15T22:59:58 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
@@ -21,62 +23,56 @@
 	</background>
 	<title>
 		<band height="71" splitType="Stretch">
+			<image>
+				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
+				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
+			</image>
 			<staticText>
-				<reportElement x="214" y="0" width="205" height="19" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
+				<reportElement x="4" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
+				<text><![CDATA[Desde:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="178" y="51" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="44" y="50" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
+				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="144" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<textField evaluationTime="Report">
+				<reportElement x="390" y="10" width="190" height="30" uuid="1e4b612b-c8c3-4167-9c37-15bb0c82c9e8"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "+$V{PAGE_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="388" y="40" width="190" height="23" uuid="a7c10adf-ee1c-4a29-82e3-0f130c54d3d9"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="180" y="1" width="205" height="19" uuid="cf65107c-e268-4b98-bc20-0a4ba7f5a9da"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="214" y="12" width="205" height="14" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
+				<reportElement x="180" y="20" width="205" height="19" uuid="55a9cbf3-4e74-48cd-9c04-5baa93094a9d"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Docentes]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="447" y="19" width="104" height="20" uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3"/>
-				<text><![CDATA[F. Generación:]]></text>
-			</staticText>
-			<image>
-				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
-				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement x="110" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
-				<text><![CDATA[Desde:]]></text>
-			</staticText>
-			<textField evaluationTime="Report">
-				<reportElement x="527" y="4" width="40" height="12" uuid="25ed0a8f-fcb5-404a-9104-576653ec13a7"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" of " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="527" y="19" width="100" height="20" uuid="fc3eb40b-6b2e-47ed-b0d2-11cbcc092063"/>
-				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="296" y="51" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
-				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="150" y="50" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
-				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="262" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
-				<text><![CDATA[Hasta:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="493" y="4" width="34" height="15" uuid="fb4533cb-fa2f-4732-8252-354888d36afb"/>
-				<text><![CDATA[Pág.]]></text>
 			</staticText>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
 			<staticText>
-				<reportElement x="24" y="2" width="110" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
+				<reportElement x="0" y="2" width="134" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -177,7 +173,7 @@
 				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="24" y="0" width="110" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<reportElement x="0" y="0" width="134" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -207,13 +203,9 @@
 	</lastPageFooter>
 	<summary>
 		<band height="50">
-			<staticText>
-				<reportElement x="70" y="13" width="80" height="20" uuid="b94b28dd-dd7d-49cb-ad83-96eb93e8c053"/>
-				<text><![CDATA[Total Docentes:]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="154" y="13" width="100" height="20" uuid="3e089dda-3c39-40af-bf73-b822f8c0c473"/>
-				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+				<reportElement x="70" y="6" width="174" height="20" uuid="443ddb15-8659-4060-92bc-95c952cef492"/>
+				<textFieldExpression><![CDATA["Total de Docentes: "+ $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
