--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
@@ -21,8 +21,10 @@
         <h:form>            
             <p:panel>
                 <p:panelGrid columns="4">
-                    <p:outputLabel for="anio" value="Año Escolar:"></p:outputLabel>
-                    <p:inputText id="anio" value="#{rptAlumnosController.anioEscolar}"></p:inputText>
+                    <p:outputLabel for="anioDesde" value="Matriculado desde:"></p:outputLabel>
+                    <p:calendar id="anioDesde" value="#{rptAlumnosController.anioDesde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha desde" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:outputLabel for="anioHasta" value="hasta:"></p:outputLabel>
+                    <p:calendar id="anioHasta" value="#{rptAlumnosController.anioHasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha hasta" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
                     <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{rptAlumnosController.idGrado}" valueChangeListener="#{rptAlumnosController.getSeccionesGrado}">
                         <f:selectItem itemValue="0" itemLabel="Seleccionar todos"></f:selectItem>
@@ -34,6 +36,7 @@
                         <f:selectItem itemValue="0" itemLabel="Seleccionar todos"></f:selectItem>
                         <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{rptAlumnosController.seccionesList}" var="seccion"></f:selectItems>
                     </p:selectOneMenu>
+                    <p:commandButton value="generar" actionListener="#{rptAlumnosController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta"  var="car" value="#{rptAlumnosController.listDatos}" 
@@ -54,7 +57,7 @@
                     <p:column headerText="Telefono" >
                         #{car.telefono}
                     </p:column>
-                    <p:column headerText="Grado Actual" >
+                    <p:column headerText="Grado" >
                         #{car.gradoActual}
                     </p:column>
                     <f:facet name="footer">
@@ -69,7 +72,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" ajax="false" actionListener="#{rptAlumnosController.generarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptAlumnosController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptAlumnosController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
